fixed open new win

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                                 <div class="col-lg-4 col-md-4 col-sm-4"></div>
 
                             </div>
-                            <form class="form-horizontal" role="form" name="form1" method="post" action="http://www.zdravniskazbornica.si/iskalnik/iskalnik.aspx?priimek=&amp;licencaId=" id="form1">
+                            <form class="form-horizontal" role="form" name="form1" method="post" action="http://www.zdravniskazbornica.si/iskalnik/iskalnik.aspx?priimek=&amp;licencaId=" id="form1" target="_blank">
                                 <div>
                                     <input type="hidden" name="__EVENTTARGET" id="__EVENTTARGET" value="" />
                                     <input type="hidden" name="__EVENTARGUMENT" id="__EVENTARGUMENT" value="" />
@@ -575,8 +575,6 @@
                                     <div class="form-group">
                                         <div class="col-sm-offset-5 col-sm-7">
                                             <input type="submit" name="BtnIsci" value="Iskanje" id="BtnIsci" class="btn btn-primary" style="width: 30%" />
-                                            <br>
-                                            <small style="color: #808080; font-size: xx-small">Pozor: povezava je preusmeritev</small>
                                         </div>
                                     </div>
                                 </form>
