--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 <div class="box col-md-6">
                     <div class="box-inner">
                         <div class="box-header well" data-original-title="">
-                            <h2><i class="glyphicon glyphicon-search"></i> Iskalec medicinjskega osebja</h2>
+                            <h2><i class="glyphicon glyphicon-search"></i> Iskalec medicinskega osebja</h2>
 
                             <div class="box-icon">
                                 <a href="#" class="btn btn-minimize btn-round btn-default"><i
