--- a/login.html
+++ b/login.html
@@ -52,6 +52,8 @@
     <!-- The fav icon -->
 
 </head>
+<link rel="shortcut icon" href="images/healthcare-bubble.png">
+
 
 <body>
 <div class="row">
