--- a/alergije.html
+++ b/alergije.html
@@ -50,84 +50,13 @@
 
 
 </head>
+<link rel="shortcut icon" href="images/healthcare-bubble.png">
 
 <body>
-<!-- topbar starts
-<div class="navbar navbar-default" role="navigation">
-
-    <div class="navbar-inner">
-        <button type="button" class="navbar-toggle pull-left animated flip">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html"> <img alt="Charisma Logo" src="img/logo20.png" class="hidden-xs"/>
-            <span id="charisma">Charisma</span></a>
-
-
-        <div class="btn-group pull-right">
-            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                <i class="glyphicon glyphicon-user"></i><span class="hidden-sm hidden-xs" id="up-ime-tag"> admin</span>
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li><a href="login.html"><span class="glyphicon glyphicon-off"></span>  Izpiši me</a></li>
-            </ul>
-        </div>
-
-
-
-        <div class="btn-group pull-right theme-container animated tada">
-            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                <i class="glyphicon glyphicon-tint"></i><span
-                    class="hidden-sm hidden-xs"> Change Theme / Skin</span>
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" id="themes">
-                <li><a data-value="classic" href="#"><i class="whitespace"></i> Classic</a></li>
-                <li><a data-value="cerulean" href="#"><i class="whitespace"></i> Cerulean</a></li>
-                <li><a data-value="cyborg" href="#"><i class="whitespace"></i> Cyborg</a></li>
-                <li><a data-value="simplex" href="#"><i class="whitespace"></i> Simplex</a></li>
-                <li><a data-value="darkly" href="#"><i class="whitespace"></i> Darkly</a></li>
-                <li><a data-value="lumen" href="#"><i class="whitespace"></i> Lumen</a></li>
-                <li><a data-value="slate" href="#"><i class="whitespace"></i> Slate</a></li>
-                <li><a data-value="spacelab" href="#"><i class="whitespace"></i> Spacelab</a></li>
-                <li><a data-value="united" href="#"><i class="whitespace"></i> United</a></li>
-            </ul>
-        </div>
-
-
-        <ul class="collapse navbar-collapse nav navbar-nav top-menu">
-            <li><a href="#"><i class="glyphicon glyphicon-globe"></i> Visit Site</a></li>
-            <li class="dropdown">
-                <a href="#" data-toggle="dropdown"><i class="glyphicon glyphicon-star"></i> Dropdown <span
-                        class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">One more separated link</a></li>
-                </ul>
-            </li>
-            <li>
-                <form class="navbar-search pull-left">
-                    <input placeholder="Search" class="search-query form-control col-md-10" name="query"
-                           type="text">
-                </form>
-            </li>
-        </ul>
-
-    </div>
-</div>
-topbar ends -->
 
 <div class="navbar navbar-default" role="navigation">
 
-    <div class="navbar-inner">
+    <div class="navbar-inner" style="text-align: center">
         <button type="button" class="navbar-toggle pull-left animated flip">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -141,6 +70,8 @@ topbar ends -->
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
+                <li><a href="javascript:void(0)" onclick="kreirajEHRDemoOseb()"><span class="glyphicon glyphicon-certificate"></span>  Zgeneriraj EHR</a></li>
+                <li class="divider"></li>
                 <li><a href="login.html"><span class="glyphicon glyphicon-off"></span>  Izpiši me</a></li>
             </ul>
         </div>
@@ -154,7 +85,7 @@ topbar ends -->
 <div class="page-header">
     <a href="index.html" style="text-decoration: none;">
         <div align="center">
-            <h4><font color="blue"><span id="naslovnoIme">Gašper Andrejc</span></font>
+            <h4><font color="blue"><span id="naslovnoIme"></span></font>
                 <small><font color="#6495ed">in moj e-Zdravnik</font></small><img src="images/e-doc-logo.png"></h4>
 
         </div>
@@ -182,15 +113,15 @@ topbar ends -->
                         <li class="nav-header hidden-md">Moja Zdravniška Kartoteka</li>
                         <li><a class="ajax-link" href="družinska_zgodovina.html"><i class="glyphicon glyphicon-list-alt"></i><span> Družinska zgodovina</span></a>
                         </li>
-                        <li><a class="ajax-link" href="vitalni_znaki.html"><i class="glyphicon glyphicon-list-alt"></i><span> Vitalni znaki</span></a>
+                        <li><a class="ajax-link" href="vitalni_znaki.html"><i class="glyphicon glyphicon-heart"></i><span> Vitalni znaki</span></a>
                         </li>
-                        <li><a class="ajax-link" href="slike.html"><i class="glyphicon glyphicon-list-alt"></i><span> Slike</span></a>
+                        <li><a class="ajax-link" href="slike.html"><i class="glyphicon glyphicon-camera"></i><span> Slike</span></a>
                         </li>
-                        <li><a class="ajax-link" href="izvidi.html"><i class="glyphicon glyphicon-picture"></i><span> Izvidi <small>(spec. pregledi)</small></span></a>
+                        <li><a class="ajax-link" href="izvidi.html"><i class="glyphicon glyphicon-tasks"></i><span> Izvidi <small>(spec. pregledi)</small></span></a>
                         </li>
-                        <li><a class="ajax-link" href="alergije.html"><i class="glyphicon glyphicon-picture"></i><span> Alergije</span></a>
+                        <li><a class="ajax-link" href="alergije.html"><i class="glyphicon glyphicon-leaf"></i><span> Alergije</span></a>
                         </li>
-                        <li><a class="ajax-link" href="zdravila_reakcije.html"><i class="glyphicon glyphicon-picture"></i><span> Zdravila in reakcije</span></a>
+                        <li><a class="ajax-link" href="zdravila_reakcije.html"><i class="glyphicon glyphicon-asterisk"></i><span> Zdravila in reakcije</span></a>
                         </li>
                         <li class="nav-header hidden-md">Drugo</li>
 
@@ -203,7 +134,7 @@ topbar ends -->
                         </li>
                         <!-- <li><a class="ajax-link" href="grid.html"><i
                                      class="glyphicon glyphicon-th"></i><span> Grid</span></a></li> -->
-                        <li><a href="#"><i class="glyphicon glyphicon-globe"></i><span> Pomoč</span></a></li>
+                        <li><a href="tour.html"><i class="glyphicon glyphicon-globe"></i><span> Pomoč</span></a></li>
                         <!-- <li><a class="ajax-link" href="icon.html"><i
                                      class="glyphicon glyphicon-star"></i><span> Icons</span></a></li> -->
                         <!-- <li><a href="error.html"><i class="glyphicon glyphicon-ban-circle"></i><span> Error Page</span></a>
@@ -249,21 +180,6 @@ topbar ends -->
                                 <th>Trajanja</th>
                             </tr>
 
-                            <tr>
-                                <td>Alergija na cvetni prah</td>
-                                <td>Zamašen nos, kihanje</td>
-                                <td>Insert some medicine here</td>
-                                <td>21 let</td>
-                                <td>Spomladi</td>
-                            </tr>
-                            <tr>
-                                <td>Alergija na tečne ženske</td>
-                                <td>Zamašen nos, kihanje</td>
-                                <td>Še ni odkrito</td>
-                                <td>15 let</td>
-                                <td>Non-stop</td>
-                            </tr>
-
 
                         </table>
                         <table>
@@ -272,7 +188,13 @@ topbar ends -->
                                 <td><input class="form-control" id="al_simptomi" placeholder="Simptomi"></td>
                                 <td><input class="form-control" id="al_zdravila" placeholder="Zdravila"></td>
                                 <td><input class="form-control" id="al_prvic" placeholder="Prvič opažena"></td>
-                                <td><input class="form-control" id="al_trajanja" placeholder="Trajanja"></td>
+                                <td><select class="form-control" id="al_trajanja">
+                                    <option>Pozimi</option>
+                                    <option>Spomlad</option>
+                                    <option>Poleti</option>
+                                    <option>Jeseni</option>
+                                    <option>Vseskozi</option>
+                                </select></td>
                                 <td><a id="dodaj-alergijo" href="javascript:void(0)" onclick="dodajAlergijo()" class="btn btn-default"><i
                                         class="glyphicon glyphicon-plus"></i></a></td>
                             </tr>
@@ -361,27 +283,11 @@ topbar ends -->
 <script src="js/index.js"></script>
 <script src="js/jquery.bootstrap-autohidingnavbar.js"></script>
 <script src="js/odpriIzvide.js"></script>
+<script src="ehr-js/ehr.js"></script>
+
+
 <script type="text/javascript">
-    function dodajAlergijo(){
-
-        var al = jQuery("#al_alergija").val();
-        var sm = jQuery("#al_simptomi").val();
-        var zd = jQuery("#al_zdravila").val();
-        var pr = jQuery("#al_prvic").val();
-        var tr = jQuery("#al_trajanja").val();
-
-
-
-        var html = '<tr> <td>'+al+'</td> <td>'+sm+'</td> <td>'+zd+'</td> <td>'+pr+'</td> <td>'+tr+'</td> </tr>'
-
-
-
-
-        $("#tabela-alergij").append(html);
-
-
-    }
-
+    window.onload = nastaviAlergije();
 </script>
 
 
