--- a/vitalni_znaki.html
+++ b/vitalni_znaki.html
@@ -56,83 +56,13 @@
 
 </head>
 
+<link rel="shortcut icon" href="images/healthcare-bubble.png">
+
 <body>
-<!-- topbar starts
-<div class="navbar navbar-default" role="navigation">
-
-    <div class="navbar-inner">
-        <button type="button" class="navbar-toggle pull-left animated flip">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html"> <img alt="Charisma Logo" src="img/logo20.png" class="hidden-xs"/>
-            <span id="charisma">Charisma</span></a>
-
-
-        <div class="btn-group pull-right">
-            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                <i class="glyphicon glyphicon-user"></i><span class="hidden-sm hidden-xs" id="up-ime-tag"> admin</span>
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li><a href="login.html"><span class="glyphicon glyphicon-off"></span>  Izpiši me</a></li>
-            </ul>
-        </div>
-
-
-
-        <div class="btn-group pull-right theme-container animated tada">
-            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                <i class="glyphicon glyphicon-tint"></i><span
-                    class="hidden-sm hidden-xs"> Change Theme / Skin</span>
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" id="themes">
-                <li><a data-value="classic" href="#"><i class="whitespace"></i> Classic</a></li>
-                <li><a data-value="cerulean" href="#"><i class="whitespace"></i> Cerulean</a></li>
-                <li><a data-value="cyborg" href="#"><i class="whitespace"></i> Cyborg</a></li>
-                <li><a data-value="simplex" href="#"><i class="whitespace"></i> Simplex</a></li>
-                <li><a data-value="darkly" href="#"><i class="whitespace"></i> Darkly</a></li>
-                <li><a data-value="lumen" href="#"><i class="whitespace"></i> Lumen</a></li>
-                <li><a data-value="slate" href="#"><i class="whitespace"></i> Slate</a></li>
-                <li><a data-value="spacelab" href="#"><i class="whitespace"></i> Spacelab</a></li>
-                <li><a data-value="united" href="#"><i class="whitespace"></i> United</a></li>
-            </ul>
-        </div>
-
-
-        <ul class="collapse navbar-collapse nav navbar-nav top-menu">
-            <li><a href="#"><i class="glyphicon glyphicon-globe"></i> Visit Site</a></li>
-            <li class="dropdown">
-                <a href="#" data-toggle="dropdown"><i class="glyphicon glyphicon-star"></i> Dropdown <span
-                        class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">One more separated link</a></li>
-                </ul>
-            </li>
-            <li>
-                <form class="navbar-search pull-left">
-                    <input placeholder="Search" class="search-query form-control col-md-10" name="query"
-                           type="text">
-                </form>
-            </li>
-        </ul>
-
-    </div>
-</div>
-topbar ends -->
 
 <div class="navbar navbar-default" role="navigation">
 
-    <div class="navbar-inner">
+    <div class="navbar-inner" style="text-align: center">
         <button type="button" class="navbar-toggle pull-left animated flip">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -146,6 +76,8 @@ topbar ends -->
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
+                <li><a href="javascript:void(0)" onclick="kreirajEHRDemoOseb()"><span class="glyphicon glyphicon-certificate"></span>  Zgeneriraj EHR</a></li>
+                <li class="divider"></li>
                 <li><a href="login.html"><span class="glyphicon glyphicon-off"></span>  Izpiši me</a></li>
             </ul>
         </div>
@@ -159,7 +91,7 @@ topbar ends -->
 <div class="page-header">
     <a href="index.html" style="text-decoration: none;">
         <div align="center">
-            <h4><font color="blue"><span id="naslovnoIme">Gašper Andrejc</span></font>
+            <h4><font color="blue"><span id="naslovnoIme"></span></font>
                 <small><font color="#6495ed">in moj e-Zdravnik</font></small><img src="images/e-doc-logo.png"></h4>
 
         </div>
@@ -187,15 +119,17 @@ topbar ends -->
                         <li class="nav-header hidden-md">Moja Zdravniška Kartoteka</li>
                         <li><a class="ajax-link" href="družinska_zgodovina.html"><i class="glyphicon glyphicon-list-alt"></i><span> Družinska zgodovina</span></a>
                         </li>
-                        <li><a class="ajax-link" href="vitalni_znaki.html"><i class="glyphicon glyphicon-list-alt"></i><span> Vitalni znaki</span></a>
+                        <li><a class="ajax-link" href="vitalni_znaki.html"><i class="glyphicon glyphicon-heart"></i><span> Vitalni znaki</span></a>
                         </li>
-                        <li><a class="ajax-link" href="slike.html"><i class="glyphicon glyphicon-list-alt"></i><span> Slike</span></a>
+                        <li><a class="ajax-link" href="graficni_pregled_vitalnih.html" id="graficni-pregled"><i class="glyphicon glyphicon-stats"></i><span> Grafični pregled</span></a>
                         </li>
-                        <li><a class="ajax-link" href="izvidi.html"><i class="glyphicon glyphicon-picture"></i><span> Izvidi <small>(spec. pregledi)</small></span></a>
+                        <li><a class="ajax-link" href="slike.html"><i class="glyphicon glyphicon-camera"></i><span> Slike</span></a>
                         </li>
-                        <li><a class="ajax-link" href="alergije.html"><i class="glyphicon glyphicon-picture"></i><span> Alergije</span></a>
+                        <li><a class="ajax-link" href="izvidi.html"><i class="glyphicon glyphicon-tasks"></i><span> Izvidi <small>(spec. pregledi)</small></span></a>
                         </li>
-                        <li><a class="ajax-link" href="zdravila_reakcije.html"><i class="glyphicon glyphicon-picture"></i><span> Zdravila in reakcije</span></a>
+                        <li><a class="ajax-link" href="alergije.html"><i class="glyphicon glyphicon-leaf"></i><span> Alergije</span></a>
+                        </li>
+                        <li><a class="ajax-link" href="zdravila_reakcije.html"><i class="glyphicon glyphicon-asterisk"></i><span> Zdravila in reakcije</span></a>
                         </li>
                         <li class="nav-header hidden-md">Drugo</li>
 
@@ -208,7 +142,7 @@ topbar ends -->
                         </li>
                         <!-- <li><a class="ajax-link" href="grid.html"><i
                                      class="glyphicon glyphicon-th"></i><span> Grid</span></a></li> -->
-                        <li><a href="#"><i class="glyphicon glyphicon-globe"></i><span> Pomoč</span></a></li>
+                        <li><a href="tour.html"><i class="glyphicon glyphicon-globe"></i><span> Pomoč</span></a></li>
                         <!-- <li><a class="ajax-link" href="icon.html"><i
                                      class="glyphicon glyphicon-star"></i><span> Icons</span></a></li> -->
                         <!-- <li><a href="error.html"><i class="glyphicon glyphicon-ban-circle"></i><span> Error Page</span></a>
@@ -240,81 +174,8 @@ topbar ends -->
                 </li>
             </ul>
             <ul class="timeline" id="timel">
-                <li>
-                    <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
-                    <div class="timeline-panel">
-                        <div class="timeline-heading">
-                            <h4 class="timeline-title">10.12.2014 (15:15)</h4>
-                            <p><small class="text-muted"> dr.med. Lonec Olga Pogačar</small></p>
-                        </div>
-                        <div class="timeline-body">
-                            <div class="row">
-                                <div class="col-lg-5 col-md-5">
-                                    <p><b>Višina:</b></p>
-                                    <p><b>Teža:</b></p>
-                                    <p><b>Indeks tel. mase:</b></p>
-                                </div>
-                                <div class="col-lg-7 col-md-7">
-                                    <p><b>Temperatura:</b></p>
-                                    <p><b>Sistolični krvni tlak:</b></p>
-                                    <p><b>Diastolični krvni tlak:</b></p>
-                                    <p><b>Nasičenost krvi s kisikom:</b></p>
-                                </div>
-                                <span class="label label-success" style="margin-left: 20px">Vitalni znaki zadovoljivi.</span>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="timeline-inverted">
-                    <div class="timeline-badge warning"><i class="glyphicon glyphicon-eye-open"></i></div>
-                    <div class="timeline-panel">
-                        <div class="timeline-heading">
-                            <h4 class="timeline-title">10.11.2014 (15:24)</h4>
-                            <p><small class="text-muted"> Jaz</small></p>
-                        </div>
-                        <div class="timeline-body">
-                            <div class="row">
-                                <div class="col-lg-5 col-md-5">
-                                    <p><b>Višina:</b></p>
-                                    <p><b>Teža:</b></p>
-                                    <p><b>Indeks tel. mase:</b></p>
-                                </div>
-                                <div class="col-lg-7 col-md-7">
-                                    <p><b>Temperatura:</b></p>
-                                    <p><b>Sistolični krvni tlak:</b></p>
-                                    <p><b>Diastolični krvni tlak:</b></p>
-                                    <p><b>Nasičenost krvi s kisikom:</b></p>
-                                </div>
-                                <span class="label label-warning" style="margin-left: 20px">Bodite pozorni na označena področja.</span>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="timeline-badge danger"><i class="glyphicon glyphicon-warning-sign"></i></div>
-                    <div class="timeline-panel">
-                        <div class="timeline-heading">
-                            <h4 class="timeline-title">10.10.2014 (15:24)</h4>
-                            <p><small class="text-muted"> Jaz</small></p>
-                        </div>
-                        <div class="timeline-body">
-                            <div class="row">
-                                <div class="col-lg-5 col-md-5">
-                                    <p><b>Višina:</b></p>
-                                    <p><b>Teža:</b></p>
-                                    <p><b>Indeks tel. mase:</b></p>
-                                </div>
-                                <div class="col-lg-7 col-md-7">
-                                    <p><b>Temperatura:</b></p>
-                                    <p><b>Sistolični krvni tlak:</b></p>
-                                    <p><b>Diastolični krvni tlak:</b></p>
-                                    <p><b>Nasičenost krvi s kisikom:</b></p>
-                                </div>
-                                <span class="label label-danger" style="margin-left: 20px">Čimprej se posvetujte s svojim zdravnikom.</span>
-                            </div>
-                        </div>
-                    </div>
-                </li>
+
+
 
             </ul>
 
@@ -335,7 +196,7 @@ topbar ends -->
 
 <div class="panel panel-primary" id="visibility-dodaj-vpis-vitalnih">
     <div class="panel-heading" id="heading-dodaj-v-koledar">Dodaj zapis vitalnih znakov</div>
-    <div class="panel-body">
+    <div class="panel-body" id="dodajanjeZnakov">
         <div class="row">
             <div class="col-lg-5 col-md-5 col-sm-5">
                 <form class="form-horizontal" role="form">
@@ -354,7 +215,7 @@ topbar ends -->
                     <div class="form-group">
                         <label for="itm-input" class="col-lg-5 col-md-5 col-sm-5 control-label">Indeks tel. mase:</label>
                         <div class="col-sm-6">
-                            <input class="form-control" id="itm-input" placeholder="ITM">
+                            <input class="form-control" id="itm-input" placeholder="ITM" disabled>
                         </div>
                     </div>
                 </form>
@@ -388,7 +249,7 @@ topbar ends -->
                 </form>
             </div>
         </div>
-        <div class="row" style="margin-top: 20px">
+        <div class="row" style="margin-top: 20px" >
             <div class="col-lg-2 col-md-2"></div>
             <form class="form-inline" role="form">
                 <div class="form-group">
@@ -399,17 +260,11 @@ topbar ends -->
                 <div class="form-group">
                     <input class="form-control" id="vnos-izvedel" placeholder="Odgovorna oseba">
                 </div>
-                <button id="dodajDog" type="button" class="btn btn-success" onclick="dodajVitalniZnak(); toggle_visibility('visibility-dodaj-vpis-vitalnih')">Dodaj</button>
+                <button id="dodajDog" type="button" class="btn btn-success" onclick="dodajVitalniZnak()">Dodaj</button>
                 <button type="button" class="btn btn-warning" onclick="toggle_visibility('visibility-dodaj-vpis-vitalnih')">Prekliči</button>
 
             </form>
         </div>
-
-
-
-
-
-
 
     </div>
 </div>
@@ -448,8 +303,10 @@ topbar ends -->
 <script src="js/charisma.js"></script>
 <script src="js/index.js"></script>
 <script src="js/jquery.bootstrap-autohidingnavbar.js"></script>
-<script src="js/vitalni-znaki.js"></script>
-
+<script src="ehr-js/ehr.js"></script>
+<script type="text/javascript">
+    window.onload = nastaviVitalneZnake1();
+</script>
 
 
 
