--- a/zdravila_reakcije.html
+++ b/zdravila_reakcije.html
@@ -50,84 +50,13 @@
 
 
 </head>
+<link rel="shortcut icon" href="images/healthcare-bubble.png">
 
 <body>
-<!-- topbar starts
-<div class="navbar navbar-default" role="navigation">
-
-    <div class="navbar-inner">
-        <button type="button" class="navbar-toggle pull-left animated flip">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html"> <img alt="Charisma Logo" src="img/logo20.png" class="hidden-xs"/>
-            <span id="charisma">Charisma</span></a>
-
-
-        <div class="btn-group pull-right">
-            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                <i class="glyphicon glyphicon-user"></i><span class="hidden-sm hidden-xs" id="up-ime-tag"> admin</span>
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li><a href="login.html"><span class="glyphicon glyphicon-off"></span>  Izpiši me</a></li>
-            </ul>
-        </div>
-
-
-
-        <div class="btn-group pull-right theme-container animated tada">
-            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                <i class="glyphicon glyphicon-tint"></i><span
-                    class="hidden-sm hidden-xs"> Change Theme / Skin</span>
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" id="themes">
-                <li><a data-value="classic" href="#"><i class="whitespace"></i> Classic</a></li>
-                <li><a data-value="cerulean" href="#"><i class="whitespace"></i> Cerulean</a></li>
-                <li><a data-value="cyborg" href="#"><i class="whitespace"></i> Cyborg</a></li>
-                <li><a data-value="simplex" href="#"><i class="whitespace"></i> Simplex</a></li>
-                <li><a data-value="darkly" href="#"><i class="whitespace"></i> Darkly</a></li>
-                <li><a data-value="lumen" href="#"><i class="whitespace"></i> Lumen</a></li>
-                <li><a data-value="slate" href="#"><i class="whitespace"></i> Slate</a></li>
-                <li><a data-value="spacelab" href="#"><i class="whitespace"></i> Spacelab</a></li>
-                <li><a data-value="united" href="#"><i class="whitespace"></i> United</a></li>
-            </ul>
-        </div>
-
-
-        <ul class="collapse navbar-collapse nav navbar-nav top-menu">
-            <li><a href="#"><i class="glyphicon glyphicon-globe"></i> Visit Site</a></li>
-            <li class="dropdown">
-                <a href="#" data-toggle="dropdown"><i class="glyphicon glyphicon-star"></i> Dropdown <span
-                        class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">One more separated link</a></li>
-                </ul>
-            </li>
-            <li>
-                <form class="navbar-search pull-left">
-                    <input placeholder="Search" class="search-query form-control col-md-10" name="query"
-                           type="text">
-                </form>
-            </li>
-        </ul>
-
-    </div>
-</div>
-topbar ends -->
 
 <div class="navbar navbar-default" role="navigation">
 
-    <div class="navbar-inner">
+    <div class="navbar-inner" style="text-align: center">
         <button type="button" class="navbar-toggle pull-left animated flip">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -141,6 +70,8 @@ topbar ends -->
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
+                <li><a href="javascript:void(0)" onclick="kreirajEHRDemoOseb()"><span class="glyphicon glyphicon-certificate"></span>  Zgeneriraj EHR</a></li>
+                <li class="divider"></li>
                 <li><a href="login.html"><span class="glyphicon glyphicon-off"></span>  Izpiši me</a></li>
             </ul>
         </div>
@@ -154,7 +85,7 @@ topbar ends -->
 <div class="page-header">
     <a href="index.html" style="text-decoration: none;">
         <div align="center">
-            <h4><font color="blue"><span id="naslovnoIme">Gašper Andrejc</span></font>
+            <h4><font color="blue"><span id="naslovnoIme"></span></font>
                 <small><font color="#6495ed">in moj e-Zdravnik</font></small><img src="images/e-doc-logo.png"></h4>
 
         </div>
@@ -182,15 +113,15 @@ topbar ends -->
                         <li class="nav-header hidden-md">Moja Zdravniška Kartoteka</li>
                         <li><a class="ajax-link" href="družinska_zgodovina.html"><i class="glyphicon glyphicon-list-alt"></i><span> Družinska zgodovina</span></a>
                         </li>
-                        <li><a class="ajax-link" href="vitalni_znaki.html"><i class="glyphicon glyphicon-list-alt"></i><span> Vitalni znaki</span></a>
+                        <li><a class="ajax-link" href="vitalni_znaki.html"><i class="glyphicon glyphicon-heart"></i><span> Vitalni znaki</span></a>
                         </li>
-                        <li><a class="ajax-link" href="slike.html"><i class="glyphicon glyphicon-list-alt"></i><span> Slike</span></a>
+                        <li><a class="ajax-link" href="slike.html"><i class="glyphicon glyphicon-camera"></i><span> Slike</span></a>
                         </li>
-                        <li><a class="ajax-link" href="izvidi.html"><i class="glyphicon glyphicon-picture"></i><span> Izvidi <small>(spec. pregledi)</small></span></a>
+                        <li><a class="ajax-link" href="izvidi.html"><i class="glyphicon glyphicon-tasks"></i><span> Izvidi <small>(spec. pregledi)</small></span></a>
                         </li>
-                        <li><a class="ajax-link" href="alergije.html"><i class="glyphicon glyphicon-picture"></i><span> Alergije</span></a>
+                        <li><a class="ajax-link" href="alergije.html"><i class="glyphicon glyphicon-leaf"></i><span> Alergije</span></a>
                         </li>
-                        <li><a class="ajax-link" href="zdravila_reakcije.html"><i class="glyphicon glyphicon-picture"></i><span> Zdravila in reakcije</span></a>
+                        <li><a class="ajax-link" href="zdravila_reakcije.html"><i class="glyphicon glyphicon-asterisk"></i><span> Zdravila in reakcije</span></a>
                         </li>
                         <li class="nav-header hidden-md">Drugo</li>
 
@@ -203,7 +134,7 @@ topbar ends -->
                         </li>
                         <!-- <li><a class="ajax-link" href="grid.html"><i
                                      class="glyphicon glyphicon-th"></i><span> Grid</span></a></li> -->
-                        <li><a href="#"><i class="glyphicon glyphicon-globe"></i><span> Pomoč</span></a></li>
+                        <li><a href="tour.html"><i class="glyphicon glyphicon-globe"></i><span> Pomoč</span></a></li>
                         <!-- <li><a class="ajax-link" href="icon.html"><i
                                      class="glyphicon glyphicon-star"></i><span> Icons</span></a></li> -->
                         <!-- <li><a href="error.html"><i class="glyphicon glyphicon-ban-circle"></i><span> Error Page</span></a>
@@ -237,7 +168,7 @@ topbar ends -->
                         </div>
                         <div class="panel-body">
                             <p>Seznam zdravil, ki ste jih kadarkoli jemali. Tukaj najdete tudi kako jih prenašate, zakaj ste jih jemali ter nekaj ostalih podatkov. Zdravila, ki jih trenutno jemljete so v posebnem oknu (ko prenehate z jemanjem se prenesejo podatki v to tabelo)</p>
-                            <p><b>Status v tabeli nam pove, kako delovati pred ponovnim jemanjem in se <u>generira sam na podlagi vaših vitalnih znakov v času jemanja</u>.</b> Če ni novih vnosov vitalnih znakov v času jemanja, je privzeto stanje 'priporočen posvet'.
+                            <p><b>Status v tabeli nam pove, kako delovati pred ponovnim jemanjem in se <u>generira sam na podlagi vaših vitalnih znakov v času jemanja (ali se le ti v času jemanja izboljšujejo, če so slabi, ali ne)</u>.</b> Če ni novih vnosov vitalnih znakov v času jemanja, je privzeto stanje 'priporočen posvet'.
                         </div>
 
                         <!-- Table -->
@@ -345,6 +276,8 @@ topbar ends -->
                                             class="glyphicon glyphicon-plus"></i></a></td>
                                 </tr>
                             </table>
+                            <span style="font-size: xx-small; color: grey" class="glyphicon glyphicon-info-sign">  Če je datum konca jemanja že mimo, se zdravilo avtomatsko pojavi v zgornji tabeli.</span><br>
+                            <span style="font-size: xx-small; color: grey" class="glyphicon glyphicon-info-sign">  Ko zaključite zdravilo se datum konca jemanja avtomatsko nastavi na včerajšnji datum.</span>
 
                         </div>
                     </div>
@@ -429,30 +362,10 @@ topbar ends -->
 <script src="js/index.js"></script>
 <script src="js/jquery.bootstrap-autohidingnavbar.js"></script>
 <script src="js/odpriIzvide.js"></script>
+<script src="ehr-js/ehr.js"></script>
 <script type="text/javascript">
 
-
-    function dodajZdravilo(){
-
-        var al = jQuery("#zd_naziv").val();
-        var sm = jQuery("#zd_razlog").val();
-        var zd = jQuery("#zd_jemanje").val();
-        var pr = jQuery("#zd_zacetek").val();
-        var tr = jQuery("#zd_konec").val();
-
-
-
-        var html = '<tr> <td>'+al+'</td> <td>'+sm+'</td> <td>'+zd+'</td> <td>'+pr+'</td> <td>'+tr+'</td> <td><a href="javascript:void(0)" class="btn btn-info zaklj"><i class="glyphicon glyphicon-check"></i></a> </td></tr>'
-
-
-
-
-        $("#tabelaZdravil").append(html);
-
-
-    }
-    var text;
-    $("#tabelaZdravil").on('click', '.zaklj', function(){
+   /* $("#tabelaZdravil").on('click', '.zaklj', function(){
         var x = $(this).parent().parent().html();
         $(this).parent().parent().html("");
 
@@ -463,15 +376,12 @@ topbar ends -->
         var raz = $('td:eq(1)', el).html();
         var jem =  $('td:eq(2)', el).html();
         var zac = $('td:eq(3)', el).html();
-        var kon = $('td:eq(4)', el).html();
-        var html = '<tr> <td>'+naz+'</td> <td>'+raz+'</td> <td>'+jem+'</td> <td>'+zac+'-'+kon+'</td> <td><span class="label label-danger">Nujen posvet</span> </td> </tr>'
+        var kon = new Date().toISOString().split("T")[0];
+        var html = '<tr> <td>'+naz+'</td> <td>'+raz+'</td> <td>'+jem+'</td> <td>'+zac+' - '+kon+'</td> <td><span class="label label-danger">Nujen posvet</span> </td> </tr>'
         $("#tabela-zdravil").append(html);
-    });
+    });*/
 
-
-
-
-
+    window.onload = nastaviZdravila();
 
 </script>
 
