--- a/anatomija_telesa_moski.html
+++ b/anatomija_telesa_moski.html
@@ -135,7 +135,7 @@
                         </li>
                         <!-- <li><a class="ajax-link" href="grid.html"><i
                                      class="glyphicon glyphicon-th"></i><span> Grid</span></a></li> -->
-                        <li><a href="tour.html"><i class="glyphicon glyphicon-globe"></i><span> Pomoč</span></a></li>
+                        <li><a href="map.html"><i class="glyphicon glyphicon-globe"></i><span> Zemljevid</span></a></li>
                         <!-- <li><a class="ajax-link" href="icon.html"><i
                                      class="glyphicon glyphicon-star"></i><span> Icons</span></a></li> -->
                         <!-- <li><a href="error.html"><i class="glyphicon glyphicon-ban-circle"></i><span> Error Page</span></a>
@@ -162,20 +162,19 @@
         <div id="content" class="col-lg-10 col-sm-10">
             <!-- content starts -->
 
-
+            <div class="box-inner">
+                <span>Stran v izdelavi...</span>
+            </div>
             <div class="row">
                 <div class="box col-md-12 col-lg-12 col-sm-12">
                     <div class="box-inner">
+
                         <div class="box-header well" data-original-title="">
                             <h2><i class="glyphicon glyphicon-picture"></i> Anatomija moškega</h2>
 
                             <div class="box-icon">
-                                <a href="#" class="btn btn-setting btn-round btn-default"><i
-                                        class="glyphicon glyphicon-cog"></i></a>
                                 <a href="#" class="btn btn-minimize btn-round btn-default"><i
                                         class="glyphicon glyphicon-chevron-up"></i></a>
-                                <a href="#" class="btn btn-close btn-round btn-default"><i
-                                        class="glyphicon glyphicon-remove"></i></a>
                             </div>
                         </div>
                         <div class="box-content box col-md-12 col-lg-12 col-sm-12">
