--- a/pregled_podatkov.html
+++ b/pregled_podatkov.html
@@ -135,7 +135,7 @@
                         </li>
                         <!-- <li><a class="ajax-link" href="grid.html"><i
                                      class="glyphicon glyphicon-th"></i><span> Grid</span></a></li> -->
-                        <li><a href="tour.html"><i class="glyphicon glyphicon-globe"></i><span> Pomoč</span></a></li>
+                        <li><a href="map.html"><i class="glyphicon glyphicon-globe"></i><span> Zemljevid</span></a></li>
                         <!-- <li><a class="ajax-link" href="icon.html"><i
                                      class="glyphicon glyphicon-star"></i><span> Icons</span></a></li> -->
                         <!-- <li><a href="error.html"><i class="glyphicon glyphicon-ban-circle"></i><span> Error Page</span></a>
@@ -196,7 +196,7 @@
                 <div class="box col-md-6">
                     <div class="box-inner">
                         <div class="box-header well" data-original-title="">
-                            <h2><i class="glyphicon glyphicon-th"></i> Vitalni znaki     <span class="label label-primary" id="zadnjicPosodobljeni">11.10.2014, 13:00</span></h2>
+                            <h2><i class="glyphicon glyphicon-th"></i> Vitalni znaki     <span class="label label-primary" id="zadnjicPosodobljeni"></span></h2>
 
 
                             <div class="box-icon">
