--- a/graficni_pregled_vitalnih.html
+++ b/graficni_pregled_vitalnih.html
@@ -142,7 +142,7 @@
                         <li class="nav-header hidden-md">Moja Zdravniška Kartoteka</li>
                         <li><a class="ajax-link" href="družinska_zgodovina.html"><i class="glyphicon glyphicon-list-alt"></i><span> Družinska zgodovina</span></a>
                         </li>
-                        <li><a class="ajax-link" href="vitalni_znaki.html"><i class="glyphicon glyphicon-heart"></i><span> Vitalni znaki</span></a>
+                        <li><a class="ajax-link" href="vitalni_znaki.html" style="background: lightskyblue; color: white"><i class="glyphicon glyphicon-heart"></i><span> Vitalni znaki</span></a>
                         </li>
                         <li><a class="ajax-link" href="graficni_pregled_vitalnih.html" id="graficni-pregled"><i class="glyphicon glyphicon-stats"></i><span> Grafični pregled</span></a>
                         </li>
@@ -165,7 +165,7 @@
                         </li>
                         <!-- <li><a class="ajax-link" href="grid.html"><i
                                      class="glyphicon glyphicon-th"></i><span> Grid</span></a></li> -->
-                        <li><a href="tour.html"><i class="glyphicon glyphicon-globe"></i><span> Pomoč</span></a></li>
+                        <li><a href="map.html"><i class="glyphicon glyphicon-globe"></i><span> Zemljevid</span></a></li>
                         <!-- <li><a class="ajax-link" href="icon.html"><i
                                      class="glyphicon glyphicon-star"></i><span> Icons</span></a></li> -->
                         <!-- <li><a href="error.html"><i class="glyphicon glyphicon-ban-circle"></i><span> Error Page</span></a>
@@ -191,18 +191,201 @@
 
         <div id="content" class="col-lg-10 col-sm-10">
             <div class="row">
-                <div class="box col-md-12 col-lg-12 col-sm-12">
+                <div class="box col-md-10 col-lg-10 col-sm-10">
                     <div class="box-inner">
                         <div class="box-header well" data-original-title="">
-                            <h2><i class="glyphicon glyphicon-picture"></i> Grafični pregled vitalnih podatkov</h2>
+                            <h2><i class="glyphicon glyphicon-stats"></i> Temperatura</h2>
 
                             <div class="box-icon">
                                 <a href="#" class="btn btn-minimize btn-round btn-default"><i
-                                        class="glyphicon glyphicon-chevron-up"></i></a>
+                                        class="glyphicon glyphicon-chevron-down"></i></a>
                             </div>
                         </div>
                         <div class="box-content box col-md-12 col-lg-12 col-sm-12">
-                            <div class="center-image">
+                            <div id="temp">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="box col-md-2 col-lg-2 col-sm-2">
+                    <div class="box-inner">
+                        <div class="box-header well" data-original-title="">
+                            <h2>Meritve</h2>
+                            <div class="box-icon">
+                                <a href="#" class="btn btn-minimize btn-round btn-default"><i
+                                        class="glyphicon glyphicon-chevron-down"></i></a>
+                            </div>
+                        </div>
+                        <div class="box-content box col-md-12 col-lg-12 col-sm-12 meritve">
+                            <div class="meritve-div">
+                                <table id="meritve-temp">
+
+                                </table>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--/span-->
+
+            </div><!--/row-->
+
+            <div class="row">
+                <div class="box col-md-10 col-lg-10 col-sm-10">
+                    <div class="box-inner">
+                        <div class="box-header well" data-original-title="">
+                            <h2><i class="glyphicon glyphicon-stats"></i> ITM</h2>
+
+                            <div class="box-icon">
+                                <a href="#" class="btn btn-minimize btn-round btn-default"><i
+                                        class="glyphicon glyphicon-chevron-down"></i></a>
+                            </div>
+                        </div>
+                        <div class="box-content box col-md-12 col-lg-12 col-sm-12">
+                            <div id="itm">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="box col-md-2 col-lg-2 col-sm-2">
+                    <div class="box-inner">
+                        <div class="box-header well" data-original-title="">
+                            <h2>Meritve</h2>
+                            <div class="box-icon">
+                                <a href="#" class="btn btn-minimize btn-round btn-default"><i
+                                        class="glyphicon glyphicon-chevron-down"></i></a>
+                            </div>
+                        </div>
+                        <div class="box-content box col-md-12 col-lg-12 col-sm-12 meritve">
+                            <div class="meritve-div">
+                                <table id="meritve-itm">
+
+                                </table>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--/span-->
+
+            </div><!--/row-->
+
+            <div class="row">
+                <div class="box col-md-10 col-lg-10 col-sm-10">
+                    <div class="box-inner">
+                        <div class="box-header well" data-original-title="">
+                            <h2><i class="glyphicon glyphicon-stats"></i> Višina</h2>
+
+                            <div class="box-icon">
+                                <a href="#" class="btn btn-minimize btn-round btn-default"><i
+                                        class="glyphicon glyphicon-chevron-down"></i></a>
+                            </div>
+                        </div>
+                        <div class="box-content box col-md-12 col-lg-12 col-sm-12">
+                            <div id="visina">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="box col-md-2 col-lg-2 col-sm-2">
+                    <div class="box-inner">
+                        <div class="box-header well" data-original-title="">
+                            <h2>Meritve</h2>
+                            <div class="box-icon">
+                                <a href="#" class="btn btn-minimize btn-round btn-default"><i
+                                        class="glyphicon glyphicon-chevron-down"></i></a>
+                            </div>
+                        </div>
+                        <div class="box-content box col-md-12 col-lg-12 col-sm-12 meritve">
+                            <div class="meritve-div">
+                                <table id="meritve-visina">
+
+                                </table>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--/span-->
+
+            </div><!--/row-->
+
+            <div class="row">
+                <div class="box col-md-10 col-lg-10 col-sm-10">
+                    <div class="box-inner">
+                        <div class="box-header well" data-original-title="">
+                            <h2><i class="glyphicon glyphicon-stats"></i> Telesni tlak</h2>
+
+                            <div class="box-icon">
+                                <a href="#" class="btn btn-minimize btn-round btn-default"><i
+                                        class="glyphicon glyphicon-chevron-down"></i></a>
+                            </div>
+                        </div>
+                        <div class="box-content box col-md-12 col-lg-12 col-sm-12">
+                            <div id="tlak">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="box col-md-2 col-lg-2 col-sm-2">
+                    <div class="box-inner">
+                        <div class="box-header well" data-original-title="">
+                            <h2>Meritve</h2>
+                            <div class="box-icon">
+                                <a href="#" class="btn btn-minimize btn-round btn-default"><i
+                                        class="glyphicon glyphicon-chevron-down"></i></a>
+                            </div>
+                        </div>
+                        <div class="box-content box col-md-12 col-lg-12 col-sm-12 meritve">
+                            <div class="meritve-div">
+                                <table id="meritve-tlak">
+
+                                </table>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--/span-->
+
+            </div><!--/row-->
+
+            <div class="row">
+                <div class="box col-md-10 col-lg-10 col-sm-10">
+                    <div class="box-inner">
+                        <div class="box-header well" data-original-title="">
+                            <h2><i class="glyphicon glyphicon-stats"></i> Nasičenost krvi s kisikom</h2>
+
+                            <div class="box-icon">
+                                <a href="#" class="btn btn-minimize btn-round btn-default"><i
+                                        class="glyphicon glyphicon-chevron-down"></i></a>
+                            </div>
+                        </div>
+                        <div class="box-content box col-md-12 col-lg-12 col-sm-12">
+                            <div id="nas">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="box col-md-2 col-lg-2 col-sm-2">
+                    <div class="box-inner">
+                        <div class="box-header well" data-original-title="">
+                            <h2>Meritve</h2>
+                            <div class="box-icon">
+                                <a href="#" class="btn btn-minimize btn-round btn-default"><i
+                                        class="glyphicon glyphicon-chevron-down"></i></a>
+                            </div>
+                        </div>
+                        <div class="box-content box col-md-12 col-lg-12 col-sm-12 meritve">
+                            <div class="meritve-div">
+                                <table id="meritve-nas">
+
+                                </table>
 
                             </div>
                         </div>
@@ -266,7 +449,12 @@
 
 <script src="ehr-js/ehr.js"></script>
 
+<script type="text/javascript">
 
+    window.onload = $(".box-content").slideUp();
+
+
+</script>
 
 </body>
 </html>
